--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Les Addiccions</title>
+  <title>Les Addiccions - Proyecte 1</title>
 </head>
 <body>
 
@@ -15,7 +15,7 @@
 
   
   <div class="video-container">
-    <h2>Les Addiccions</h2>
+    <h2>Video de les Addiccions</h2>
     <iframe src="multimedia/Video addiccions (1).mp4" width="1920" height="1080" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" title="Proyecto 1"></iframe>
   </div>
 
