--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <iframe width="1440" height="1000" src="https://www.youtube.com/embed/pm8_HG1U6GQ?si=t-hxXERHxLXavR1B" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
         <video controls>
-            <source src="../multimedia/Video addiccions (1).mp4" >
+            <source src="../multimedia/Video addiccions (1).mp4"" >
         </video>
     </section>
 
