--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>
         <h1>Les Addiccions</h1>
-        <img src="../multimedia/logo1.png" alt="logo">
+        <img src="multimedia/logo1.png" alt="logo">
     </header>
 
     <section>
@@ -22,13 +22,13 @@
         <iframe width="1440" height="1000" src="https://www.youtube.com/embed/pm8_HG1U6GQ?si=t-hxXERHxLXavR1B" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
         <video controls>
-            <source src="../multimedia/Video addiccions (1).mp4"" >
+            <source src="multimedia/Video addiccions (1).mp4" >
         </video>
     </section>
 
     <footer>
         <audio controls autoplay loop>
-            <source src="../multimedia/vlog-music-beat-trailer-showreel-promo-background-intro-theme-274290.mp3" type="audio/mp3">
+            <source src="multimedia/vlog-music-beat-trailer-showreel-promo-background-intro-theme-274290.mp3" type="audio/mp3">
         </audio>
         <p>© Copyright </p>
     </footer>
